--- a/openapi/Dockerfile
+++ b/openapi/Dockerfile
@@ -1,4 +1,4 @@
 FROM swaggerapi/swagger-ui:latest
 COPY ./openapi /usr/share/nginx/html/api
-ENV URLS="[{url: 'api/merged.swagger.json', name: 'merged'},{url: 'api/user.swagger.json', name: 'user'},{url: 'api/saas.swagger.json', name: 'saas'},{url: 'api/sys.swagger.json', name: 'sys'}]"
+ENV URLS="[{url: 'api/kit-merged.swagger.json', name: 'kit-merged'},{url: 'api/user.swagger.json', name: 'user'},{url: 'api/saas.swagger.json', name: 'saas'},{url: 'api/sys.swagger.json', name: 'sys'}]"
 EXPOSE 8080
