--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     depends_on:
       - mysqld
       - redis
+      - kafka
     volumes:
       - ./quickstart/configs:/data/conf
       - ./quickstart/.assets:/app/.assets
@@ -64,7 +65,7 @@ services:
     command: ["./sys", "-conf", "/data/conf","-seed","/data/conf/seed/sys.yaml"]
 
   mysqld:
-    image: mysql:5.7
+    image: mysql:8.0
     restart: always
     environment:
       - MYSQL_ROOT_PASSWORD=youShouldChangeThis
@@ -73,6 +74,10 @@ services:
       - mysql_data:/var/lib/mysql
     ports:
       - "3406:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
 
   redis:
     image: redis:6.0
