--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -16,7 +16,7 @@ data:
     databases:
       default:
         driver: mysql
-        source: root:youShouldChangeThis@tcp(mysqld:3306)/mysql?parseTime=true&loc=Local&charset=utf8mb4
+        source: root:youShouldChangeThis@tcp(mysqld:3306)/kit?parseTime=true&loc=Local&charset=utf8mb4
     redis:
       default:
         addr: redis:6379
@@ -43,13 +43,13 @@ data:
   blobs:
     user:
       provider: os
-      public_url: http://localhost:8600
+      public_url: /
       base_path: "assets/user"
       os:
         dir: ".assets"
     saas:
       provider: os
-      public_url: http://localhost:8600
+      public_url: /
       base_path: "assets/saas"
       os:
         dir: ".assets"
