--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,7 +1,8 @@
 version: v1
 plugins:
-  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.6.0-1
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
     out: ./openapi
     opt:
       - allow_merge=true
+      - proto3_optional_nullable=true
       - merge_file_name=kit-merged
