--- a/sys/buf.gen.yaml
+++ b/sys/buf.gen.yaml
@@ -18,8 +18,9 @@ plugins:
     out: ../
     opt:
       - paths=source_relative
-  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.6.0-1
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
     out: ../openapi
     opt:
       - allow_merge=true
+      - proto3_optional_nullable=true
       - merge_file_name=sys
