--- a/payment/buf.gen.yaml
+++ b/payment/buf.gen.yaml
@@ -1,21 +1,21 @@
 version: v1
 plugins:
   - name: go
-    out: ../
+    out: ./
     opt: paths=source_relative
   - name: go-http
-    out: ../
+    out: ./
     opt: paths=source_relative
   - name: go-grpc
-    out: ../
+    out: ./
     opt: paths=source_relative
   - name: validate
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
       - lang=go
   - name: go-errors
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
@@ -23,4 +23,4 @@ plugins:
     opt:
       - allow_merge=true
       - proto3_optional_nullable=true
-      - merge_file_name=saas
+      - merge_file_name=payment
