--- a/user/buf.gen.yaml
+++ b/user/buf.gen.yaml
@@ -18,6 +18,10 @@ plugins:
     out: ../
     opt:
       - paths=source_relative
+  - name: go-errors-i18n
+    out: ../
+    opt:
+      - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
     out: ../openapi
     opt:
