--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -64,7 +64,7 @@ jobs:
             echo "$DOCKER_TAG"
             cd /app/go-saas-kit
             docker-compose -f docker-compose.yml -f docker-compose.tracing.yml pull
-            docker-compose -f docker-compose.yml -f docker-compose.tracing.yml up -d
+            docker-compose -f docker-compose.yml -f docker-compose.tracing.yml up -d --remove-orphans
      
 
           
