--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
 
-  apisix-plugin:
+  apisix:
     build:
       context: .
       dockerfile: ./gateway/apisix/Dockerfile
