--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ services:
     volumes:
       - ./quickstart/configs:/data/conf
       - ./quickstart/.assets:/app/.assets
-    command: ["./sys", "-conf", "/data/conf","-seed","/data/conf/seed/sys.yaml"]
+    command: ["./sys", "-conf", "/data/conf","-seed.path","/data/conf/seed/sys.yaml"]
 
 
   mysqld:
