--- a/saas/buf.gen.yaml
+++ b/saas/buf.gen.yaml
@@ -1,35 +1,35 @@
 version: v1
 plugins:
   - name: go
-    out: ../
+    out: ./
     opt: paths=source_relative
   - name: go-http
-    out: ../
+    out: ./
     opt: paths=source_relative
   - name: go-grpc
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
       - require_unimplemented_servers=false
   - name: go-grpc-proxy
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
   - name: validate
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
       - lang=go
   - name: go-errors
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
   - name: go-errors-i18n
-    out: ../
+    out: ./
     opt:
       - paths=source_relative
-  - remote: buf.build/grpc-ecosystem/plugins/openapiv2
-    out: ../openapi
+  - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
+    out: ./openapi
     opt:
       - allow_merge=true
       - proto3_optional_nullable=true
