--- a/.github/workflows/buf.yml
+++ b/.github/workflows/buf.yml
@@ -16,25 +16,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: bufbuild/buf-setup-action@v1.5.0
+      - name: link
+        run: make link
       - name: test buf build
-        run: buf build ./proto
-      - uses: bufbuild/buf-push-action@v1.0.1
-        if: |
-          github.event_name == 'push'
-          && github.repository == 'Goxiaoy/go-saas-kit'
-        with:
-          input: 'proto'
-          buf_token: ${{ secrets.BUF_TOKEN }}
-      - uses: bufbuild/buf-push-action@v1.0.1
-        if: |
-          github.event_name == 'push'
-          && github.repository == 'Goxiaoy/go-saas-kit'
-        with:
-          input: 'pkg'
-          buf_token: ${{ secrets.BUF_TOKEN }}
-      - uses: bufbuild/buf-push-action@v1.0.1
-        if: |
-          github.event_name == 'push'
-          && github.repository == 'Goxiaoy/go-saas-kit'
-        with:
-          buf_token: ${{ secrets.BUF_TOKEN }}
+        run: buf build
