--- a/.github/workflows/docker-release.yml
+++ b/.github/workflows/docker-release.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the docker image
-        run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml build
+        run: docker-compose -f docker-compose.yml -f docker-compose.ms.yml -f docker-compose.monolithic.yml build
 
       - name: Docker login
         if: |
@@ -33,4 +33,4 @@ jobs:
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
 
-        run: docker-compose -f docker-compose.yml -f docker-compose.dev.yml push
+        run: docker-compose -f docker-compose.yml -f docker-compose.ms.yml -f docker-compose.monolithic.yml push
