--- a/docker-compose.monolithic.yml
+++ b/docker-compose.monolithic.yml
@@ -1,7 +1,23 @@
 version: '3.7'
 services:
+
+  apisix:
+    volumes:
+      - ./quickstart/configs/apisix/apisix_conf/config.yaml:/usr/local/apisix/conf/config.yaml:ro
+      - ./quickstart/monolithic/apisix/apisix_conf/apisix.yaml:/usr/local/apisix/conf/apisix.yaml:ro
+      - ./quickstart/configs:/data/conf
+      #override service config
+      - ./quickstart/monolithic/config.override.yaml:/data/conf/config.override.yaml
+    depends_on:
+      - monolithic
+
   monolithic:
     image: ${DOCKER_REGISTRY}go-saas-kit-monolithic:${DOCKER_TAG:-latest}
     build:
       context: .
       dockerfile: ./examples/monolithic/Dockerfile
+    volumes:
+      - ./quickstart/configs:/data/conf
+      - ./quickstart/.assets:/app/.assets
+    restart: on-failure
+    command: ["./  monolithic", "-conf", "/data/conf","seed.menu.path","/data/conf/seed/sys.yaml"]
