--- a/.github/workflows/docker-image-monolithic.yml
+++ b/.github/workflows/docker-image-monolithic.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Build the docker image
-        run: docker-compose -f docker-compose.monolithic.yml build
+        run: docker-compose -f docker-compose.yml -f docker-compose.monolithic.yml build monolithic
 
       - name: Docker login
         if: |
@@ -35,6 +35,6 @@ jobs:
           github.event_name == 'push'
           && github.repository == 'Goxiaoy/go-saas-kit'
 
-        run: docker-compose -f docker-compose.monolithic.yml push
+        run: docker-compose -f docker-compose.yml -f docker-compose.monolithic.yml push monolithic
 
           
