fix: unregistered service

--- a/docker-compose.ms.yml
+++ b/docker-compose.ms.yml
@@ -45,7 +45,7 @@ services:
     volumes:
       - ./quickstart/configs:/data/conf
       - ./quickstart/.assets:/app/.assets
-    command: ["./sys", "-conf", "/data/conf","seed.menu.path","/data/conf/seed/sys.yaml"]
+    command: ["./sys", "-conf", "/data/conf","-seed.menu.path","/data/conf/seed/sys.yaml"]
     restart: on-failure
     build:
       context: .
