--- a/quickstart/configs/seed/sys.yaml
+++ b/quickstart/configs/seed/sys.yaml
@@ -17,13 +17,11 @@ menus:
         is_preserved: true
       - name: "go_saas_kit"
         icon: "ant-design:api-outlined"
-        path: "sources"
-        redirect: "https://github.com/Goxiaoy/go-saas-kit"
+        path: "https://github.com/Goxiaoy/go-saas-kit"
         title: "GO-SAAS-KIT"
         is_preserved: true
       - name: "go_saas"
         icon: "ant-design:api-outlined"
-        path: "saas"
-        redirect: "https://github.com/Goxiaoy/go-saas"
-        title: "GO-SAAS-KIT"
+        path: "https://github.com/Goxiaoy/go-saas"
+        title: "GO-SAAS"
         is_preserved: true
