--- a/docker-compose.ms.yml
+++ b/docker-compose.ms.yml
@@ -2,6 +2,7 @@ version: '3.7'
 services:
 
   apisix:
+    image: ${DOCKER_REGISTRY}go-saas-kit-apisix:${DOCKER_TAG:-latest}
     volumes:
       - ./quickstart/configs/apisix/apisix_conf/config.yaml:/usr/local/apisix/conf/config.yaml:ro
       - ./quickstart/configs/apisix/apisix_conf/apisix.yaml:/usr/local/apisix/conf/apisix.yaml:ro
