--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -16,8 +16,7 @@ data:
         source: root:youShouldChangeThis@tcp(mysqld:3306)/kit?parseTime=true&loc=Local&charset=utf8mb4
     redis:
       default:
-        addr: redis:6379
-        password: youShouldChangeThis
+        url: redis://:youShouldChangeThis@redis:6379
     email:
       smtp:
         host: localhost
@@ -59,8 +58,15 @@ security:
       admin_url: http://hydra:4445
 
 logging:
-  filter:
-    - level: INFO
+  zap:
+    level: "debug"
+    outputPaths: [ "stdout", "rolling://.temp/logs" ]
+    errorOutputPaths: [ "stderr" ]
+    encoding: json
+    encoderConfig:
+      messageKey: message
+      levelKey: level
+      levelEncoder: lowercase
 
 tracing:
   otel:
