--- a/user/buf.gen.yaml
+++ b/user/buf.gen.yaml
@@ -29,8 +29,8 @@ plugins:
     opt:
       - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
-    out: ./openapi
+    out: ./user/private/service/openapi
     opt:
       - allow_merge=true
       - proto3_optional_nullable=true
-      - merge_file_name=user
+      - merge_file_name=api
