--- a/quickstart/monolithic/apisix/apisix_conf/config.yaml
+++ b/quickstart/monolithic/apisix/apisix_conf/config.yaml
@@ -40,7 +40,7 @@ apisix:
     port: 9092
 
 ext-plugin:
-  cmd: ["/app/go-runner", "run","-c /data/conf -c /data/conf.override"]
+  cmd: ["/app/go-runner", "run","-c /data/conf","-c /data/conf.override"]
 
 #etcd:
 #  host:                           # it's possible to define multiple etcd hosts addresses of the same etcd cluster.
