--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,5 +1,33 @@
 version: v1
 plugins:
+  - name: go
+    out: ./
+    opt: paths=source_relative
+  - name: go-http
+    out: ./
+    opt: paths=source_relative
+  - name: go-grpc
+    out: ./
+    opt:
+      - paths=source_relative
+      - require_unimplemented_servers=false
+  - name: go-grpc-proxy
+    out: ./
+    opt:
+      - paths=source_relative
+  - name: validate
+    out: ./
+    opt:
+      - paths=source_relative
+      - lang=go
+  - name: go-errors
+    out: ./
+    opt:
+      - paths=source_relative
+  - name: go-errors-i18n
+    out: ./
+    opt:
+      - paths=source_relative
   - remote: buf.build/grpc-ecosystem/plugins/openapiv2:v2.7.1-1
     out: ./openapi
     opt:
