--- a/docker-compose.pulsar.yml
+++ b/docker-compose.pulsar.yml
@@ -2,19 +2,20 @@ version: '3.7'
 services:
 
   pulsar:
-    image: "apachepulsar/pulsar:2.10.0"
+    image: "apachepulsar/pulsar:2.10.1"
     command: bin/pulsar standalone
-    environment:
-      PULSAR_MEM: " -Xms512m -Xmx512m -XX:MaxDirectMemorySize=1g"
+    hostname: pulsar
     volumes:
-      - type: bind
-        source: ./pulsardata
+      - source: ./.temp/pulsardata
         target: /pulsar/data
-#      - pulsarconf:/pulsar/conf
+        type: bind
+#      - source: ./.temp/pulsarconf
+#        target: /pulsar/conf
+#        type: bind
     ports:
       - "6650:6650"
       - "8080:8080"
-    restart: unless-stopped
+#    restart: unless-stopped
 
   pulsar-manager:
     image: "apachepulsar/pulsar-manager:v0.2.0"
@@ -29,7 +30,6 @@ services:
       SPRING_CONFIGURATION_FILE: /pulsar-manager/pulsar-manager/application.properties
 
 
-volumes:
-  pulsardata:
-
+#volumes:
+#  pulsardata:
 #  pulsarconf:
