--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -15,7 +15,8 @@ data:
         source: root:youShouldChangeThis@tcp(mysqld:3306)/kit?parseTime=true&loc=Local&charset=utf8mb4
     redis:
       default:
-        url: redis://:youShouldChangeThis@redis:6379
+        addr: redis:6379
+        password: youShouldChangeThis
     email:
       smtp:
         host: localhost
