--- a/quickstart/configs/config.yaml
+++ b/quickstart/configs/config.yaml
@@ -15,7 +15,7 @@ data:
         source: root:youShouldChangeThis@tcp(mysqld:3306)/kit?parseTime=true&loc=Local&charset=utf8mb4
     redis:
       default:
-        addr: redis:6379
+        addrs: ["redis:6379"]
         password: youShouldChangeThis
     email:
       smtp:
