--- a/docker-compose.kafka.yml
+++ b/docker-compose.kafka.yml
@@ -25,3 +25,12 @@ services:
     depends_on:
       - zoo1
     restart: always
+
+  kafka-ui:
+    image: provectuslabs/kafka-ui:latest
+#    ports:
+#      - 8082:8080
+    environment:
+      KAFKA_CLUSTERS_0_NAME: local
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:9092
+      SERVER_SERVLET_CONTEXT_PATH: /kafka-ui
